# continual-learning

./: .gitignore  pyproject.toml
continual_learning/: main.py  utils.py
continual_learning/data/: available.py  load.py
continual_learning/eval/: evaluate.py
continual_learning/models/: classifier.py  classifier_stream.py  cond_vae.py  feature_extractor.py  generative_classifier.py  separate_classifiers.py  vae.py
continual_learning/models/cl/: continual_learner.py  fromp_optimizer.py  memory_buffer.py
continual_learning/models/conv/: layers.py  nets.py
continual_learning/models/fc/: layers.py  nets.py
continual_learning/params/: param_stamp.py
continual_learning/train/: train_stream.py  train_task_based.py
