[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "continual-learning"
version = "0.1.0"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "torch",
    "torchvision",
    "tqdm",
    "scikit-learn",
    "matplotlib",
    "visdom",
    "jupyterlab",
    "ipywidgets"
]
packages = [
    { include = "continual_learning" }
]
